force-app/main/default/objects/Lead/fields/Classification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Classification_Reason__c</fullName>
    <description>Set by Flow MC_BizBash_Lead_RecordType_Classification — audit trail of how the lead record type was determined at insert (exact email match to Contact/prior Lead, or default).</description>
    <label>Classification Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>