force-app/main/default/objects/Lead/fields/SFMC_Form_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Form_Submission_Date__c</fullName>
    <description>Original form submission timestamp from SFMC Form_Entries or Manual_Entries DateAdded used by the CRM_Integration lead import process.</description>
    <label>SFMC Form Submission Date</label>
    <type>DateTime</type>
</CustomField>