force-app/main/default/objects/Lead/fields/SFMC_Import_Source__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Import_Source__c</fullName>
    <description>Identifies the import path that created or updated the Lead from Salesforce Marketing Cloud.</description>
    <label>SFMC Import Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>